codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯
  Resuming session…

› draft while loading


after:
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯


› draft while loading


---
fork lookup fallback:
before:
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯
  Forking session…

› draft while loading


after:
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯


› Ask Codex to do anything

  ? 查 看 快 捷 键
---
fork picker cancellation:
before:
hidden while picker owns input
after:
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯


› Ask Codex to do anything

  ? 查 看 快 捷 键
