codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_full_frames.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
empty (48 columns):
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯


› Ask Codex to do anything

  ? 查 看 快 捷 键
---
resuming (48 columns):
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯
  Resuming session…

› Ask Codex to do anything

  ? 查 看 快 捷 键
---
forking (48 columns):
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯
  Forking session…

› draft while loading


---
multiline (48 columns):
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯


› first startup line
  second startup line


---
narrow (18 columns):
╭────────────────╮
│ >_ OpenAI Cod… │
│                │
│ 模 型 ：  loadin… │
│ 目 录 ：  loading │
╰────────────────╯


› first startup
  line
  second startup
  line
