codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_onboarding_transition.snap
---
source: tui/src/startup_draft_tests.rs
expression: frames
---
before onboarding: hidden (0x0 viewport)
---
after onboarding:
╭──────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)     │
│                              │
│ 模 型 ：  loading   /model 更 改  │
│ 目 录 ：  loading               │
╰──────────────────────────────╯


› Ask Codex to do anything

  ? 查 看 快 捷 键
